--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.8",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "postcss-cli": "^10.0.0"
   }
 }
